test/classes/stonea/objectIteratorNoParens.good
objectIteratorNoParens.chpl:12: error: method 'these' must have parentheses
